[gd_scene load_steps=5 format=2]

[ext_resource path="res://fonts/Pixel-Life.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/ui/button_prompt/ButtonPrompt.gd" type="Script" id=2]
[ext_resource path="res://sprites/ui/button_prompt/playstation/face_buttons/circle.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 1 )

[node name="ButtonPrompt" type="Node2D"]
scale = Vector2( 0.4, 0.4 )
script = ExtResource( 2 )

[node name="Container" type="HBoxContainer" parent="."]
margin_left = -28.9275
margin_top = -24.2853
margin_right = 264.073
margin_bottom = 23.7147
custom_constants/separation = 17
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="TextureRect" parent="Container"]
margin_right = 48.0
margin_bottom = 48.0
size_flags_horizontal = 0
size_flags_vertical = 6
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="Label" parent="Container"]
show_behind_parent = true
margin_left = 65.0
margin_top = 1.0
margin_right = 293.0
margin_bottom = 46.0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 1 )
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Container/Text"]
visible = false
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -28.0
margin_top = -5.0
margin_right = 10.0
margin_bottom = 4.0
size_flags_horizontal = 6
color = Color( 1, 1, 1, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IndexTween" type="Tween" parent="."]

[node name="EnabledTween" type="Tween" parent="."]
